<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tw_all_visits_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_visits_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_all_visits"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/background_no_active"
            android:gravity="center"
            android:maxLength="3"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_all_visits"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b_add_visit"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_add_box_24"
            android:stateListAnimator="@drawable/ic_baseline_add_box_24" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_first"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="0"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_first_brand"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:maxLength="4"
            android:maxLines="1"
            android:text="РС"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_first"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_result_first_brand"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="0"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_second"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="0"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_second_brand"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:maxLength="4"
            android:maxLines="1"
            android:text="ТЛ"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_second"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_result_second_brand"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="0"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all_third"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="0"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_third_brand"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:maxLength="4"
            android:maxLines="1"
            android:text="ЗМ"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_third"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_result_third_brand"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="0"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_result_share_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_total_share"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@color/background_no_active"
            android:gravity="center"
            android:maxLength="5"
            android:maxLines="1"
            android:padding="2dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_change_total_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLength="6"
            android:maxLines="1"
            android:text="%"
            android:textColor="@color/teal_700"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_total_share" />

        <EditText
            android:id="@+id/et_total_vodka"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@color/white"
            android:enabled="false"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="4dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_rust_vodka"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@color/white"
            android:enabled="false"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="4dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/share_rust_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="Доля в т.т." />

        <TextView
            android:id="@+id/tv_check_result_share"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:maxLength="5"
            android:maxLines="1"
            android:text="0.0"
            android:textColor="@color/teal_700"
            android:textSize="22sp" />

        <Button
            android:id="@+id/b_check_result_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/b_chek_result_text"
            android:backgroundTint="@color/teal_700"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:text="@string/text_save_changes"
            android:textSize="14sp" />

        <Button
            android:id="@+id/b_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:backgroundTint="@color/teal_700"/>

    </LinearLayout>


</LinearLayout>